--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.2.9",
     "framer-motion": "^3.7.0",
+    "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
     "popmotion": "^9.2.1",
     "react": "^17.0.1",
