--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "moment": "^2.29.1",
     "popmotion": "^9.2.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.1.0",
     "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
