--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.1.0",
