--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.2.9",
     "framer-motion": "^3.7.0",
+    "image-to-base64": "^2.1.1",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
     "popmotion": "^9.2.1",
