--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
-    "react-dotenv": "^0.1.3",
     "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
@@ -28,8 +27,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
