--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@brainhubeu/react-carousel": "^1.19.26",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -20,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
+    "react-responsive-carousel": "^3.2.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.1.0",
