--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "firebase": "^8.2.9",
     "framer-motion": "^3.7.0",
     "image-to-base64": "^2.1.1",
@@ -56,5 +57,16 @@
     "whitelist": [
       "API_URL"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/types": "^5.1.0",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "typescript": "^4.2.3"
   }
 }
