--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.2.9",
     "framer-motion": "^3.7.0",
     "image-to-base64": "^2.1.1",
+    "material-ui": "^1.0.0-beta.47",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
     "popmotion": "^9.2.1",
